Store the data for the ligo example in a zip string

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "homepage": "https://github.com/ni-kismet/",
   "dependencies": {
     "ni-webcharts": "0.4.3",
-    "ni-webcharts-legends": "0.0.3"
+    "ni-webcharts-legends": "0.0.3",
+    "pako": "^1.0.4"
   }
 }
