--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ node_modules/jqwidgets-framework/*
 node_modules/**/coverage/*
 node_modules/jquery/src/*
 node_modules/jquery-mobile/dist/demos/*
+node_modules/jquery-mobile/dist/jquery.mobile.images.zip
+node_modules/jquery-mobile/dist/jquery.mobile.zip
