--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "https://www.ni.com/legal/license/",
   "homepage": "https://github.com/ni-kismet/",
   "dependencies": {
+    "jquery": "1.9.1",
     "jquery-mobile": "1.4.1",
     "ni-webcharts": "0.4.8",
     "ni-webcharts-legends": "0.0.6",
