--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ node_modules/jqwidgets-framework/*
 !node_modules/jqwidgets-framework/package.json
 !node_modules/jqwidgets-framework/jqwidgets/
 
+node_modules/@jqwidgets/jqx-element/*
+!node_modules/@jqwidgets/jqx-element/package.json
+!node_modules/@jqwidgets/jqx-element/source-minified/
+
 node_modules/**/coverage/*
 node_modules/jquery/src/*
 
