--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "https://www.ni.com/legal/license/",
   "homepage": "https://github.com/ni-kismet/",
   "dependencies": {
-    "ni-webcharts": "0.8.9",
-    "ni-webcharts-legends": "0.2.14",
+    "ni-webcharts": "1.0.0-1",
+    "ni-webcharts-legends": "1.0.0-0",
     "pako": "1.0.4"
   }
 }
